--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,9 +1,9 @@
 {
     "name": "MinimalCord",
     "description": "Changes Discord enough to give it a fresh feel while also making it darker. Supports both Light and Dark themes",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "author": "Gibbu#1211",
     "theme": "MinimalCord.theme.css",
-    "consent": "false",
-    "license": "unknown"
+    "consent": ["ext_listing"],
+    "license": "MIT"
 }
