--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ipados",
+  "name": "minimalcord",
   "version": "1.0.0",
   "description": "Discord redesigned to be simplified. Design by jacktompsett on Behance.",
-  "repository": "https://github.com/DiscordStyles/iPadOS.git",
+  "repository": "https://github.com/DiscordStyles/MinimalCord.git",
   "author": "Gibbu <Gibbu_@hotmail.com>",
   "license": "MIT",
   "private": false,
