--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -3,7 +3,7 @@
     "description": "Changes Discord enough to give it a fresh feel while also making it darker. Supports both Light and Dark themes",
     "version": "2.0.0",
     "author": "Gibbu#1211",
-    "theme": "MinimalCord.theme.css",
+    "theme": "dist/MinimalCord.theme.css",
     "consent": ["ext_listing"],
     "license": "MIT"
 }
