--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,3 +1,13 @@
 {
-	"name": "MinimalCord"
+	"name": "MinimalCord",
+	"compiler": {
+		"postcss": true
+	},
+	"dev": {
+		"target": ["src", "main.scss"]
+	},
+	"build": {
+		"target": ["src", "_base.scss"],
+		"outputPath": ["dist", "dist"]
+	}
 }
