--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,13 +1,17 @@
 {
-	"name": "MinimalCord",
 	"compiler": {
-		"postcss": true
+		"prefix": true
 	},
-	"dev": {
-		"target": ["src", "main.scss"]
-	},
-	"build": {
-		"target": ["src", "_base.scss"],
-		"outputPath": ["dist", "dist"]
-	}
+	"dev": [
+		{
+			"target": ["src", "main.scss"],
+			"output": ["MinimalCord.theme.css"]
+		}
+	],
+	"build": [
+		{
+			"target": ["src", "_base.scss"],
+			"output": ["dist", "MinimalCord.css"]
+		}
+	]
 }
