--- a/scripts/config.json
+++ b/scripts/config.json
@@ -11,7 +11,7 @@
 	"build": [
 		{
 			"target": ["src", "_base.scss"],
-			"output": ["dist", "MinimalCord.css"]
+			"output": ["dist", "dist", "MinimalCord.css"]
 		}
 	]
 }
