New npm package

--- a/bd-scss.config.json
+++ b/bd-scss.config.json
@@ -5,7 +5,7 @@
 	"dev": [
 		{
 			"target": ["src", "main.scss"],
-			"output": ["MinimalCord.theme.css"]
+			"output": "MinimalCord.theme.css"
 		}
 	],
 	"build": [
