--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "minimalcord",
-  "version": "1.0.0",
-  "description": "Changes Discord enough to give it a fresh feel while also making it darker. Supports both Light and Dark themes.",
-  "repository": "https://github.com/DiscordStyles/MinimalCord.git",
-  "author": "Gibbu <Gibbu_@hotmail.com>",
-  "license": "MIT",
-  "private": false,
-  "type": "module",
-  "scripts": {
-    "dev": "bd-scss dev",
-    "build": "bd-scss build"
-  },
-  "dependencies": {
-    "bd-scss": "^2.0.12"
-  },
-  "packageManager": "pnpm@8.15.5+sha512.b051a32c7e695833b84926d3b29b8cca57254b589f0649d899c6e9d0edb670b91ec7e2a43459bae73759bb5ce619c3266f116bf931ce22d1ef1759a7e45aa96f"
+	"name": "minimalcord",
+	"version": "1.0.0",
+	"description": "Changes Discord enough to give it a fresh feel while also making it darker. Supports both Light and Dark themes.",
+	"repository": "https://github.com/DiscordStyles/MinimalCord.git",
+	"author": "Gibbu <Gibbu_@hotmail.com>",
+	"license": "MIT",
+	"private": false,
+	"type": "module",
+	"scripts": {
+		"dev": "bd-scss dev",
+		"build": "bd-scss build"
+	},
+	"dependencies": {
+		"bd-scss": "^2.0.12"
+	},
+	"packageManager": "pnpm@8.15.5+sha512.b051a32c7e695833b84926d3b29b8cca57254b589f0649d899c6e9d0edb670b91ec7e2a43459bae73759bb5ce619c3266f116bf931ce22d1ef1759a7e45aa96f",
+	"devDependencies": {
+		"prettier": "^3.3.3"
+	}
 }
